# ur3e_cdf_mppi

./: .gitignore  CLAUDE.md  OPERATION.md  README.md  pybullet_ros2_viewer.py  read_robot_state.py  requirements.txt  send_linear_traj.py  start_all_terminals.sh  start_receiver.sh
cdf/: __init__.py  data_generator.py  mlp.py  nn_cdf.py
cdf/model/: model_best.pt
planner/: obstacle_manager.py  planner_ur3e.py  planner_ur3e_real.py  visualize_obstacles.py  visualize_planner.py
rdf/: ur_rdf.py  utils.py
rdf/models/: BP_8.pt
ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/receiver_from_follower/: CMakeLists.txt  package.xml
ros2_ws/src/receiver_from_follower/src/: receiver_from_follower_node.cpp
ros2_ws/src/sender_to_follower/: CMakeLists.txt  package.xml
ros2_ws/src/sender_to_follower/src/: servo_j_to_follower_node.cpp
ur3e/: __init__.py  ur3e.py  ur3e_pybullet.py
visual/: CAMERA_SETUP.md  camera_viewer.py  collect_calib_poses.py  generate_charuco.py  obstacle_detector.py  pick_color.py  record_video.py  solve_handeye.py  start_camera.sh  visualize_obstacles_pybullet.py
