<?xml version="1.0"?>
<package format="3">
  <name>receiver_from_follower</name>
  <version>0.0.1</version>
  <description>Receive joint angles from UR3 robot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>ur_rtde</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>ur_rtde</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

