<?xml version="1.0"?>
<package format="3">
  <name>sender_to_follower</name>
  <version>0.0.1</version>
  <description>Convert end-effector twist to joint velocities using MoveIt.</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend> -->
  <build_depend>eigen3_cmake_module</build_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <!-- <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend> -->
  <exec_depend>eigen3_cmake_module</exec_depend>

  <!-- message generation support (if needed) -->
  <!-- <depend>rosidl_default_runtime</depend>

  <depend>orocos_kdl_vendor</depend>
  <depend>kdl_parser</depend> -->
  <depend>ur_rtde</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
